# rps

./: Anchor.toml  Cargo.toml  package.json
.github/workflows/: build.yml
.omc/state/: idle-notif-cooldown.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  idl.ts  main.tsx  rps-client.ts
migrations/: deploy.ts
programs/rps/: Cargo.toml
programs/rps/src/: lib.rs
tests/: rps.ts
